--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "nodemon": "2.0.7"
+    "joi": "^17.4.2",
+    "nodemon": "2.0.7",
+    "uuid": "^8.3.2"
   }
 }
